force-app/main/default/objects/Product2/fields/Additional_Cost__c.field-meta.xml
<CustomField>
    <fullName>Additional_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if this is a Additional Cost Product</description>
    <inlineHelpText>Indicates if this is a Additional Cost Product</inlineHelpText>
    <label>Additional Cost OLD</label>
    <type>Checkbox</type>
</CustomField>