force-app/main/default/objects/Product2/fields/Color_Options__c.field-meta.xml
<CustomField>
    <fullName>Color_Options__c</fullName>
    <label>Color Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>colorList1</fullName>
            </value>
            <value>
                <fullName>colorList2</fullName>
            </value>
            <value>
                <fullName>colorList3</fullName>
            </value>
            <value>
                <fullName>colorList4</fullName>
            </value>
            <value>
                <fullName>colorList5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>