force-app/main/default/objects/Product2/fields/Configurator__c.field-meta.xml
<CustomField>
    <fullName>Configurator__c</fullName>
    <label>Configurator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Configurators</valueSetName>
    </valueSet>
</CustomField>