force-app/main/default/objects/Product2/fields/Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Cost_Type__c</fullName>
    <inlineHelpText>Second Level Grouping of Costs</inlineHelpText>
    <label>Cost Type OLD</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cost_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Lumon_Cost_Types</valueSetName>
    </valueSet>
</CustomField>