force-app/main/default/objects/Product2/fields/CostType__c.field-meta.xml
<CustomField>
    <fullName>CostType__c</fullName>
    <inlineHelpText>Second Level Grouping of Costs</inlineHelpText>
    <label>Cost Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CostCategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Lumon_Cost_Types</valueSetName>
    </valueSet>
</CustomField>