force-app/main/default/objects/Product2/fields/Dimension__c.field-meta.xml
<CustomField>
    <fullName>Dimension__c</fullName>
    <label>Color Dimension OLD</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Color</fullName>
            </value>
            <value>
                <fullName>Config</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>