force-app/main/default/objects/Product2/fields/Extra_Sales__c.field-meta.xml
<CustomField>
    <fullName>Extra_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if this is a Extra Sales Product</description>
    <inlineHelpText>Indicates if this is a Extra Sales Product</inlineHelpText>
    <label>Extra Sales</label>
    <type>Checkbox</type>
</CustomField>