force-app/main/default/objects/Product2/fields/isMainProduct__c.field-meta.xml
<CustomField>
    <fullName>isMainProduct__c</fullName>
    <description>Indicates if the Product is a Main Product (ProductCode = ProductGroup)</description>
    <formula>ProductCode =  TEXT(ProductGroup__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isMainProduct</label>
    <type>Checkbox</type>
</CustomField>