force-app/main/default/objects/Product2/fields/isReclamation__c.field-meta.xml
<CustomField>
    <fullName>isReclamation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to Indicate if the Product is applicable for Reclamation
Used to find the reclamation code for Main Products</description>
    <inlineHelpText>Indicates if the Product is applicable for Reclamation</inlineHelpText>
    <label>Reclamation</label>
    <type>Checkbox</type>
</CustomField>