force-app/main/default/objects/Product2/fields/isService__c.field-meta.xml
<CustomField>
    <fullName>isService__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the Product is a Service</description>
    <inlineHelpText>Indicates if the Product is a Service</inlineHelpText>
    <label>Service</label>
    <type>Checkbox</type>
</CustomField>