force-app/main/default/objects/Product2/fields/isSovelia__c.field-meta.xml
<CustomField>
    <fullName>isSovelia__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the Product is a Sovelia Product</description>
    <inlineHelpText>Indicates if the Product is a Sovelia Product</inlineHelpText>
    <label>Sovelia</label>
    <type>Checkbox</type>
</CustomField>