force-app/main/default/objects/Product2/fields/isSpecial__c.field-meta.xml
<CustomField>
    <fullName>isSpecial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the Product is a Special Product</description>
    <inlineHelpText>indicates if the Product needs Special Handling</inlineHelpText>
    <label>Special</label>
    <type>Checkbox</type>
</CustomField>