force-app/main/default/objects/Product2/fields/isVisual__c.field-meta.xml
<CustomField>
    <fullName>isVisual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the Product is a Visual Product</description>
    <inlineHelpText>Indicates if the Product is a Visual Product</inlineHelpText>
    <label>Visual</label>
    <type>Checkbox</type>
</CustomField>