force-app/main/default/objects/Product2/fields/Manual_Processing__c.field-meta.xml
<CustomField>
    <fullName>Manual_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to Indicate if the Product needs Manual Processing</description>
    <inlineHelpText>Indicates if the Product needs Manual Processing</inlineHelpText>
    <label>Manual Processing</label>
    <type>Checkbox</type>
</CustomField>