force-app/main/default/objects/Product2/fields/needsInstallation__c.field-meta.xml
<CustomField>
    <fullName>needsInstallation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the Product requires Installation Services</description>
    <inlineHelpText>indicates if the Product requires Installation Services</inlineHelpText>
    <label>Installation</label>
    <type>Checkbox</type>
</CustomField>