force-app/main/default/objects/Product2/fields/OrderBatchSize__c.field-meta.xml
<CustomField>
    <fullName>OrderBatchSize__c</fullName>
    <label>Batch Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>