force-app/main/default/objects/Product2/fields/Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Main Product (Group) this Product Option belongs to</description>
    <label>Parent Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Product_Category__c</field>
            <operation>equals</operation>
            <value>Product Groups</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>ProductOptions</relationshipName>
    <type>Lookup</type>
</CustomField>