force-app/main/default/objects/Product2/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <description>Grouping of Items into Main Products
=&gt; API names required by Integrations</description>
    <inlineHelpText>Grouping of Items into Main Products</inlineHelpText>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Product_Groups</valueSetName>
    </valueSet>
</CustomField>