force-app/main/default/objects/Product2/fields/Product_Model__c.field-meta.xml
<CustomField>
    <fullName>Product_Model__c</fullName>
    <description>Field to Indicate the (sub)group of Product the Item belongs to
For example PELTI used for LGR =&gt; Product Group = LGR and Product Model = PELTI</description>
    <inlineHelpText>Field to Indicate the (sub)group of Product the Item belongs to</inlineHelpText>
    <label>Product Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Product_Models</valueSetName>
    </valueSet>
</CustomField>