force-app/main/default/objects/Product2/fields/Product_Name_FI__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_FI__c</fullName>
    <label>Product Name FI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>