force-app/main/default/objects/Product2/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <label>Product Sales Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>