force-app/main/default/objects/Product2/fields/ProductIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ProductIdentifier__c</fullName>
    <externalId>true</externalId>
    <label>Product Identifier</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>