force-app/main/default/objects/Product2/fields/ProductItem__c.field-meta.xml
<CustomField>
    <fullName>ProductItem__c</fullName>
    <inlineHelpText>Third Level Grouping of Products and Services</inlineHelpText>
    <label>Product Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Product_Items</valueSetName>
    </valueSet>
</CustomField>