force-app/main/default/objects/Product2/fields/ProductVendor__c.field-meta.xml
<CustomField>
    <fullName>ProductVendor__c</fullName>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lumon</fullName>
                <default>true</default>
                <label>Lumon</label>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>