force-app/main/default/objects/Product2/fields/ReclamationCode__c.field-meta.xml
<CustomField>
    <fullName>ReclamationCode__c</fullName>
    <description>Main Product SalesCode to use for Reclamation</description>
    <externalId>true</externalId>
    <inlineHelpText>Main Product SalesCode to use for Reclamation</inlineHelpText>
    <label>Reclamation Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>