force-app/main/default/objects/Product2/fields/Sales_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Code__c</fullName>
    <description>Product Id as used by External Systems</description>
    <externalId>true</externalId>
    <label>Sales Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>