force-app/main/default/objects/Product2/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the Product is a Service</description>
    <inlineHelpText>Indicates if the Product is a Service</inlineHelpText>
    <label>Service OLD</label>
    <type>Checkbox</type>
</CustomField>