force-app/main/default/objects/Product2/fields/Spare_Part__c.field-meta.xml
<CustomField>
    <fullName>Spare_Part__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if this is a Spare Part Product</description>
    <inlineHelpText>Indicates if this is a Spare Part Product</inlineHelpText>
    <label>Spare Part</label>
    <type>Checkbox</type>
</CustomField>