force-app/main/default/objects/Product2/fields/Supported_Model__c.field-meta.xml
<CustomField>
    <fullName>Supported_Model__c</fullName>
    <label>Supported Model OLD</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Product_Models</valueSetName>
    </valueSet>
</CustomField>