force-app/main/default/objects/Product2/fields/Unique_ProductCode__c.field-meta.xml
<CustomField>
    <fullName>Unique_ProductCode__c</fullName>
    <externalId>true</externalId>
    <label>Unique ProductCode</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>