force-app/main/default/objects/Product2/fields/UnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>UnitOfMeasure__c</fullName>
    <formula>TEXT(QuantityUnitOfMeasure)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Of Measure</label>
    <type>Text</type>
</CustomField>