force-app/main/default/objects/Product2/listViews/Additional_Costs_with_Attributes.listView-meta.xml
<ListView>
    <fullName>Additional_Costs_with_Attributes</fullName>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Product_Group__c</columns>
    <columns>Cost_Category__c</columns>
    <columns>Cost_Type__c</columns>
    <columns>Product_Category__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Product_Item__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Sales_Code__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Category__c</field>
        <operation>equals</operation>
        <value>Additional Costs</value>
    </filters>
    <label>Additional Costs with Attributes</label>
</ListView>