force-app/main/default/objects/Product2/listViews/After_Sales_Blinds.listView-meta.xml
<ListView>
    <fullName>After_Sales_Blinds</fullName>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Product_Group__c</columns>
    <columns>Product_Model__c</columns>
    <columns>Cost_Type__c</columns>
    <columns>Cost_Category__c</columns>
    <columns>Product_Category__c</columns>
    <columns>Product_Type__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Sales_Code__c</columns>
    <columns>Reclamation__c</columns>
    <columns>Installation__c</columns>
    <columns>PRODUCT2.QTY_UNIT_OF_MEASURE</columns>
    <columns>Unique_ProductCode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Product_Group__c</field>
        <operation>equals</operation>
        <value>LUMONBLIND,VISORBLIND,VISORBLI55,VISORBLIBO,VISORBLIEX,VISORMUU,VISORBLINDSALES</value>
    </filters>
    <label>After Sales Blinds</label>
</ListView>