force-app/main/default/objects/Product2/listViews/All_Active_Products_LG.listView-meta.xml
<ListView>
    <fullName>All_Active_Products_LG</fullName>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Product_Group__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Cost_Category__c</columns>
    <columns>Cost_Type__c</columns>
    <columns>Product_Category__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Product_Item__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.QTY_UNIT_OF_MEASURE</columns>
    <columns>Reclamation__c</columns>
    <columns>Installation__c</columns>
    <columns>Sales_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Product_Group__c</field>
        <operation>equals</operation>
        <value>LG</value>
    </filters>
    <label>All Active Products LG</label>
</ListView>