force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Cost_Type__c</columns>
    <columns>Product_Type__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Product_Group__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Cost_Category__c</columns>
    <columns>Product_Category__c</columns>
    <columns>Sales_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Code__c</field>
        <operation>equals</operation>
        <value>PD9240102</value>
    </filters>
    <label>All Products</label>
</ListView>