force-app/main/default/objects/Product2/listViews/Installation_Products.listView-meta.xml
<ListView>
    <fullName>Installation_Products</fullName>
    <columns>Cost_Category__c</columns>
    <columns>Cost_Type__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Installation__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Installation Products</label>
</ListView>