force-app/main/default/objects/Product2/listViews/Product_Items.listView-meta.xml
<ListView>
    <fullName>Product_Items</fullName>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Cost_Type__c</columns>
    <columns>Product_Category__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Product_Item__c</columns>
    <columns>Reclamation__c</columns>
    <columns>Installation__c</columns>
    <columns>PRODUCT2.QTY_UNIT_OF_MEASURE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Category__c</field>
        <operation>notEqual</operation>
        <value>Product Models</value>
    </filters>
    <label>Product Items</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>