force-app/main/default/objects/Product2/listViews/Product_Models.listView-meta.xml
<ListView>
    <fullName>Product_Models</fullName>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Product_Group__c</columns>
    <columns>Cost_Type__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Sales_Code__c</columns>
    <columns>Reclamation__c</columns>
    <columns>Installation__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Product_Category__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Product_Item__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Category__c</field>
        <operation>equals</operation>
        <value>Product Models</value>
    </filters>
    <label>Product Models</label>
</ListView>